--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,10 +3,4 @@ import Bleed from 'nextra-theme-docs/bleed'
 
 # Axolo
 
-**Axolo** is a [Next.js](https://nextjs.org) based static site generator. 0 lines of code needed.
-
-It supports Markdown with React components ([MDX](/mdx)), automatically generated [sidebar and anchor links](/docs/anchors), file-system based routing, built-in syntax highlighting, i18n and more.
-
-<Bleed>
-  <Image src="/demo.png" width={2288} height={1974} layout="intrinsic" />
-</Bleed>
+**Axolo**, [axolo.co](https://axolo.co) makes a temporary slack channel for every github pull requests, it will invites reviewers and assignees to the channel, notify them of relevant events like code comments, comments, Github Actions, Deployments and finally it will archive the channel once you close or merge the pull requests.
