--- a/pages/gettingstarted/overview.mdx
+++ b/pages/gettingstarted/overview.mdx
@@ -1,3 +1,18 @@
+import Callout from 'nextra-theme-docs/callout'
+
 # Overview
 
-This is the overview
+## Motivation
+
+The motivation behind Axolo is to help developers teams be faster in resolving pull requests. We believe sleeping pull requests are detrimental to developer productivity and that the faster they are merged the faster one can focus on a new task ahead.
+
+With Axolo we decided to buld a bridge between Github and Slack that is well integrated around Github most important feature: Pull requests. 
+
+## Axolo community
+
+Axolo is here thanks to its community of developers dedicated to work better in teams. Community members are key to Axolo development, we carefully listen to you in order to build the future of code collaboration.
+
+<Callout emoji="💡">
+Join the Axolo community on [Slack](https://join.slack.com/t/better-software-eng/shared_invite/zt-s2vkbyt2-AACaP6tnQS0adwezMXVlHQ)
+</Callout>
+
