--- a/pages/gettingstarted/installation.mdx
+++ b/pages/gettingstarted/installation.mdx
@@ -4,7 +4,7 @@
 
 To install Axolo, you’ll need to sign up from [our home page](https://axolo.co). We will require access to specific scopes in order to be able to push notifications and create channels as a Slack application.
 
-Requires Slack scopes:
+### Required Slack scopes:
 
 
 | Scope    |  Reason  |
@@ -34,7 +34,7 @@ You’ll choose between installing Axolo on all of your organization repositorie
 Axolo does not have access to your company’s code. Github code lies in the “Content API”. More information about Github scopes can be [found here](https://docs.github.com/en/rest/reference/permissions-required-for-github-apps#about-github-app-permissions).
 </Callout>
 
-Required Github scopes:
+### Required Github scopes:
 
 | Scope        | Permission  | 
 | :---          |       ---: |
@@ -59,5 +59,5 @@ Now that the Slack and the Github applications are configured, we only need to m
         style={{width:"550px"}}/>
 </div>
 
-🎉 That’s it! You can start using Axolo and select open pull requests in the same modal to create your first code review channels right away. 
+🎉 Congratulations ! You can start using Axolo and select open pull requests in the same modal to create your first code review channels right away. 
 
