--- a/pages/gettingstarted/installation.mdx
+++ b/pages/gettingstarted/installation.mdx
@@ -2,6 +2,14 @@
 
 ## Slack Installation (and scopes)
 
+<div style={{display:'flex', justifyContent:'center'}}>
+    <img 
+        src="https://axolo.s3.eu-west-3.amazonaws.com/communication/docs/slackintegration.png"
+        alt="Slack installation"
+        style={{width:"450px"}}/>
+</div>
+
+
 To install Axolo, you’ll need to sign up from [our home page](https://axolo.co). We will require access to specific scopes in order to be able to push notifications and create channels as a Slack application.
 
 ### Required Slack scopes:
