--- a/pages/gettingstarted/overview.mdx
+++ b/pages/gettingstarted/overview.mdx
@@ -6,7 +6,7 @@ import Callout from 'nextra-theme-docs/callout'
 
 The motivation behind Axolo is to help developers teams be faster in resolving pull requests. We believe sleeping pull requests are detrimental to developer productivity and that the faster they are merged the faster one can focus on a new task ahead.
 
-With Axolo we decided to buld a bridge between Github and Slack that is well integrated around Github most important feature: Pull requests. 
+With Axolo we decided to buld a bridge between Github and Slack that is well integrated around Github most important feature: **pull request**.
 
 ## Axolo community
 
