--- a/pages/guides/settings.mdx
+++ b/pages/guides/settings.mdx
@@ -1,5 +1,14 @@
 # Settings
 
+<br></br>
+<div style={{display:'flex', justifyContent:'center'}}>
+    <img 
+        src="https://axolo.s3.eu-west-3.amazonaws.com/communication/docs/axolosettings.png"
+        alt="Settings"
+        style={{width:"450px"}}/>
+</div>
+
+
 ## Auto archive Slack Channels
 If 'Auto Channel Archiver' is on, every pull request that your team will close or merge
 will automatically archive the corresponding channel in Slack.
@@ -7,7 +16,12 @@ will automatically archive the corresponding channel in Slack.
 ## Score rating
 You can decide how to compute the score of your engineers in the Axolo leaderboard. 
 
-<br></br>
+<div style={{display:'flex', justifyContent:'center'}}>
+    <img 
+        src="https://axolo.s3.eu-west-3.amazonaws.com/communication/docs/axoloscoring.png"
+        alt="Score rating"
+        style={{width:"400px"}}/>
+</div>
 <br></br>
 # Notifications
 ## Github action notifications
