--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 import Image from 'next/image'
 import Bleed from 'nextra-theme-docs/bleed'
 
-# Axolo
+# Axolodedede
 
 **Axolo**, [axolo.co](https://axolo.co) makes a temporary slack channel for every github pull request, it will invite reviewers and assignees to the channel, notify them of relevant events like code comments, comments, Github Actions, Deployments and finally it will archive the channel once you close or merge the pull requests.
